# Trabajo_Final_STR

Trabajo_final/: CMakeLists.txt  README.md
Trabajo_final/include/: DiscreteSystems.h  controlador.h  convertidores.h  planta.h  ref.h
Trabajo_final/include/DiscreteSystems/: DiscreteSystem.h  Exceptions.h  StateSpaceSystem.h  TransferFunctionSystem.h
Trabajo_final/src/: DiscreteSystem.cpp  StateSpaceSystem.cpp  TransferFunctionSystem.cpp  controlador.cpp  convertidores.cpp  planta.cpp  ref.cpp  test_controlador.cpp  test_planta.cpp  test_ref.cpp
